[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jasmin_telnet"
version = "0.0.31"
authors = [
  { name="BlackOrder", email="4302157+BlackOrder@users.noreply.github.com" },
]
description = "Manage Jasmin SMS Gateway through telnet"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [ "pexpect>=4.8.0" ]

[project.urls]
"Homepage" = "https://github.com/BlackOrder/jasmin_telnet"
"Bug Tracker" = "https://github.com/BlackOrder/jasmin_telnet/issues"